--- a/src/main/resources/templates/fighter-create.html
+++ b/src/main/resources/templates/fighter-create.html
@@ -6,31 +6,32 @@
     <link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
-<form action="#" th:action="@{/fighter-create_{id}(id=${ref_id})}" method="Post">
+<form action="#" th:action="@{/fighter-create_{id}(id=${refId})}" method="Post">
     <ul class="unmarked">
-        <li><label for="ref_id">Card_Id(read_only):</label>
-    <input readonly type="number" th:object="${ref_id}" id="ref_id" placeholder="Card_id" th:value="${ref_id}" th:name="ref_id" class="rounded">
-        </li><input readonly hidden th:value="${ref_id}" name="ref_id">
-        <li>
-            <label for="firstname">FirstName:</label>
-            <input type="text" th:field="${fighter.firstname}" id="firstname" placeholder="FirstName" name="firstname" class="rounded">
+        <li><label for="refId">Card Id(read_only):</label>
+    <input readonly type="number" th:object="${refId}" id="refId" placeholder="Card id"
+           th:value="${refId}" th:name="refId" class="rounded">
         </li>
         <li>
-            <label for="secondname">SecondName:</label>
-            <input type="text" th:field="${fighter.secondname}" id="secondname" placeholder="SecondName" name="secondname" class="rounded">
+            <label for="firstName">FirstName:</label>
+            <input type="text" th:field="${fighter.firstName}" id="firstName" placeholder="FirstName" name="firstName" class="rounded">
         </li>
         <li>
-            <label for="Nationality">Nationality:</label>
-            <input type="text" th:field="${fighter.Nationality}" id="Nationality" placeholder="Nationality" name="Nationality" class="rounded">
+            <label for="secondName">SecondName:</label>
+            <input type="text" th:field="${fighter.secondName}" id="secondName" placeholder="SecondName" name="secondName" class="rounded">
         </li>
         <li>
-            <label for="Age">Age:</label>
-            <input type="number" th:value="${fighter.Age}" id="Age"
-                   placeholder="Age" name="Age" class="rounded" min = "0">
+            <label for="nationality">Nationality:</label>
+            <input type="text" th:field="${fighter.nationality}" id="nationality" placeholder="Nationality" name="nationality" class="rounded">
+        </li>
+        <li>
+            <label for="age">Age:</label>
+            <input type="number" th:value="${fighter.age}" id="age"
+                   placeholder="Age" name="age" class="rounded" min = "0">
         </li>
         <li><input type="submit" value="Create New Fighter"></li>
         <li>
-            <div><a th:href="@{/fighters_{id}(id=${ref_id})}" id= "go_home">Back to Fighters </a></div>
+            <div><a th:href="@{/fighters_{id}(id=${refId})}" id= "go_home">Back to Fighters </a></div>
         </li>
     </ul>
 </form>
